src/test/resources/30/expanded/valid/preview-embedded/EPUB/lorem.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid">
    <metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
        <dc:identifier id="uid">urn:uuid:550e8400-e29b-41d4-a716-446667441231</dc:identifier>
        <dc:title>Lorem Ipsum</dc:title>        
        <dc:language>la</dc:language>
        <dc:date>2011-09-01</dc:date>
        <meta property="dcterms:modified">2011-09-01T17:18:00Z</meta>
    </metadata> 
    <manifest>
        <item id="nav" href="nav.xhtml" properties="nav" media-type="application/xhtml+xml" />                
        <item id="c1" href="chapter1.xhtml" media-type="application/xhtml+xml" />                
        <item id="c2" href="chapter2.xhtml" media-type="application/xhtml+xml" />                
        <item id="c3" href="chapter3.xhtml" media-type="application/xhtml+xml" />                
        <item id="css" href="lorem.css" media-type="text/css" />
    </manifest>
    <spine>
        <itemref idref="c1" />        
        <itemref idref="c2" />        
        <itemref idref="c3" />        
    </spine>
    <collection role="preview">
        <collection role="manifest">
            <link href="chapter1.xhtml" media-type="application/xhtml+xml"/>
            <link href="chapter2.xhtml" media-type="application/xhtml+xml"/>
            <link href="lorem.css" media-type="text/css"/>
        </collection>
        <link href="chapter1.xhtml"/>
    </collection>
</package>