src/test/resources/30/expanded/invalid/lorem-css-import-2/EPUB/lorem.opf
<?xml version="1.0" encoding="UTF-8"?>
<package xmlns="http://www.idpf.org/2007/opf" version="3.0" unique-identifier="uid">
    <metadata xmlns:dc="http://purl.org/dc/elements/1.1/">
        <dc:identifier id="uid">urn:uuid:550e8400-e29b-41d4-a716-446667441231</dc:identifier>
        <dc:title>Lorem Ipsum</dc:title>        
        <dc:language>la</dc:language>
        <dc:date>2011-09-01</dc:date>
        <meta property="dcterms:modified">2011-10-01T17:18:00Z</meta>
    </metadata> 
    <manifest>
        <item id="t1" href="lorem.xhtml" properties="nav" media-type="application/xhtml+xml" />                
        <item id="css" href="lorem.css" media-type="text/css" />
        <!-- in this testcase, this file is not declared: 
            <item id="css2" href="import.css" media-type="text/css" /> -->
    </manifest>
    <spine>
        <itemref idref="t1" />        
    </spine>    
</package>
